--- a/license/pom.xml
+++ b/license/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.vico.license</groupId>
   <artifactId>license</artifactId>
-  <packaging>pom</packaging>
+  <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>license Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
   <dependencies>
-    
 	    <!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
@@ -117,8 +117,4 @@
   <build>
     <finalName>license</finalName>
   </build>
-  <modules>
-  	<module>verifylicense</module>
-  	<module>verify</module>
-  </modules>
 </project>
